--- a/getdown-ux-console/src/main/polymer/console/src/job-list.html
+++ b/getdown-ux-console/src/main/polymer/console/src/job-list.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../bower_components/vaadin-progress-bar/vaadin-progress-bar.html">
 <link rel="import" href="../bower_components/vaadin-grid/vaadin-grid.html">
 <link rel="import" href="../bower_components/vaadin-grid/vaadin-grid-column.html">
+<link rel="import" href="../bower_components/vaadin-grid/vaadin-grid-column-group.html">
 <link rel="import" href="../bower_components/vaadin-grid/vaadin-grid-sorter.html">
 <link rel="import" href="../bower_components/vaadin-grid/vaadin-grid-selection-column.html">
 <link rel="import" href="redux-store.html">
@@ -25,7 +26,7 @@
 			}
 
 			vaadin-grid#grid{
-				font-size: 10pt !important;
+				font-size: 9pt !important;
 			}
 
 
@@ -53,24 +54,30 @@
 				</template>
 				<template>[[item.name]]</template>
 			</vaadin-grid-column>
-			<vaadin-grid-column>
+			<vaadin-grid-column  width="80px" flex-grow="0">
 				<template class="header">
 					<vaadin-grid-sorter path="state">State</vaadin-grid-sorter>
 				</template>
 				<template>[[item.state]]</template>
 			</vaadin-grid-column>
-			<vaadin-grid-column>
-				<template class="header">Progress</template>
-				<template>
-					<span>[[_percentage(item.downloadProgress.size,item.downloadProgress.downloadedSize)]]%</span>
-					<vaadin-progress-bar style="width: 100%"
-					                     value="[[item.downloadProgress.downloadedSize]]"
-					                     max="[[item.downloadProgress.size]]"
-					                     min="0"
-					                     id="paper_progress">
-					</vaadin-progress-bar>
-				</template>
-			</vaadin-grid-column>
+			<vaadin-grid-column-group>
+				<vaadin-grid-column  width="100px" flex-grow="0">
+					<template class="header">Progress</template>
+					<template>
+						<vaadin-progress-bar style="width: 100%"
+						                     value="[[item.downloadProgress.downloadedSize]]"
+						                     max="[[item.downloadProgress.size]]"
+						                     min="0"
+						                     id="paper_progress">
+						</vaadin-progress-bar>
+					</template>
+				</vaadin-grid-column>
+				<vaadin-grid-column  width="60px" flex-grow="0">
+					<template>
+						[[_percentage(item.downloadProgress.size,item.downloadProgress.downloadedSize)]]%
+					</template>
+				</vaadin-grid-column>
+			</vaadin-grid-column-group>
 			<vaadin-grid-column resizable>
 				<template class="header">Last message</template>
 				<template>[[item.message]]</template>
