--- a/getdown-ux-console/src/main/polymer/console/src/task-list.html
+++ b/getdown-ux-console/src/main/polymer/console/src/task-list.html
@@ -71,7 +71,7 @@
 		             on-selected-items-changed="_selectedItemsChanged"
 		             size="20"
 		             column-reordering-allowed column-resizing multi-sort>
-			<vaadin-grid-selection-column auto-select></vaadin-grid-selection-column>
+			<vaadin-grid-selection-column width="30px" flex-grow="0" auto-select></vaadin-grid-selection-column>
 			<vaadin-grid-column width="60px" flex-grow="0" align="center">
 				<template class="header">
 					<vaadin-grid-sorter path="state">State</vaadin-grid-sorter>
