guard against double running downloads

--- a/getdown-ux-console/src/main/polymer/console/src/job-list.html
+++ b/getdown-ux-console/src/main/polymer/console/src/job-list.html
@@ -74,7 +74,7 @@
 						</vaadin-progress-bar>
 					</template>
 				</vaadin-grid-column>
-				<vaadin-grid-column  width="40px" flex-grow="0">
+				<vaadin-grid-column  width="40px" align="right" flex-grow="0">
 					<template>
 						[[_percentage(item.downloadProgress.size,item.downloadProgress.downloadedSize)]]%
 					</template>
