cleanup sse emitter handling

--- a/getdown-ux-console/src/main/polymer/console/src/task-list.html
+++ b/getdown-ux-console/src/main/polymer/console/src/task-list.html
@@ -149,16 +149,16 @@
 
 			_stateColor(state) {
 				if (!state)
-					return "#757575"
+					return "#192434"
 				if ("VALIDATED" === state)
-					return "#0f9d58"
+					return "#15c15d"
 				if ("INVALID" === state)
-					return "#E53935"
+					return "#ff4238"
 				if ("VALIDATING" === state)
 					return "#FDD835"
 				if ("SUBMITTED" === state)
-					return "#039BE5"
-				return "#757575"
+					return "#1676f3"
+				return "#192434"
 			}
 
 			_selectedItemsChanged(event) {
