fix update item logic for lists

--- a/getdown-ux-console/src/main/polymer/console/src/tasks-reducer.html
+++ b/getdown-ux-console/src/main/polymer/console/src/tasks-reducer.html
@@ -61,7 +61,7 @@
 					let found = false;
 					for (let i = 0; i < items.length && !found; i++) {
 						if (items[i].handle === d.handle) {
-							items[i]=d;
+							Object.assign(items[i],d);
 							found = true
 						}
 					}
