fix update item logic for lists

--- a/getdown-ux-console/src/main/polymer/console/src/jobs-reducer.html
+++ b/getdown-ux-console/src/main/polymer/console/src/jobs-reducer.html
@@ -52,7 +52,7 @@
 				})
 			}
 			case 'JOBS_SELECTED_CHANGED': {
-				const items = state.selectedTasks.splice().concat(action.jobs)
+				const items = state.selectedJobs.splice().concat(action.jobs)
 				console.log("setting selected jobs to:" +items);
 				return Object.assign({}, state, {
 					selectedJobs: items
