--- a/getdown-ux-console/src/main/polymer/console/index.html
+++ b/getdown-ux-console/src/main/polymer/console/index.html
@@ -85,7 +85,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             line-height: 1.1;
             min-height: 100vh;
             background-color: #eeeeee;
-
+	        position: relative;
         }
 	</style>
 
