show creation date in task list

--- a/getdown-ux-console/src/main/polymer/console/index.html
+++ b/getdown-ux-console/src/main/polymer/console/index.html
@@ -74,6 +74,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	<link rel="import" href="bower_components/polymer/lib/elements/custom-style.html">
 	<!-- Load webcomponents-loader.js to check and load any polyfills your browser needs -->
 	<script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+	<script src="bower_components/moment/min/moment-with-locales.min.js" type="application/javascript"></script>
+	<script src="src/utils.js" type="application/javascript"></script>
 	<!-- Load your application shell -->
 	<link rel="import" href="src/getdown-app.html">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,400,400italic,500,500italic,700,700italic" crossorigin="anonymous">
