--- a/getdown-ux-console/src/main/polymer/console/index.html
+++ b/getdown-ux-console/src/main/polymer/console/index.html
@@ -74,7 +74,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	<link rel="import" href="bower_components/polymer/lib/elements/custom-style.html">
 	<!-- Load webcomponents-loader.js to check and load any polyfills your browser needs -->
 	<script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
-	<script src="bower_components/moment/min/moment-with-locales.min.js" type="application/javascript"></script>
+	<script src="http://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
 	<script src="src/utils.js" type="application/javascript"></script>
 	<!-- Load your application shell -->
 	<link rel="import" href="src/getdown-app.html">
