fix momentjs import

--- a/getdown-ux-console/src/main/polymer/console/src/getdown-app.html
+++ b/getdown-ux-console/src/main/polymer/console/src/getdown-app.html
@@ -28,6 +28,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="lazy-import" href="config-view.html">
 <link rel="lazy-import" href="my-view404.html">
 
+
+
 <dom-module id="getdown-app">
   <template>
 	  <custom-style>
@@ -130,6 +132,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </app-header-layout>
     </app-drawer-layout>
   </template>
+
+  <script src="../bower_components/moment/min/moment-with-locales.min.js" type="application/javascript"></script>
+
 
   <script>
 
